--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "gsap": "^3.6.0",
     "leaflet": "^1.7.1",
     "node-sass": "^5.0.0",
